fixed make data to reflect the version of CCS I am using, I did this before never commited it

--- a/source/board/makefile.am64x.r5f.gcc-armv7
+++ b/source/board/makefile.am64x.r5f.gcc-armv7
@@ -31,6 +31,7 @@ FILES_common := \
     led_gpio.c \
     led_tpic2810.c \
     led_pca9533d.c \
+    led_pca9535dwr.c \
     led_ioexp.c \
     ioexp_tca6424.c \
 
